--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,20 @@
 <resources>
-    <string name="app_name">Flash Translator</string>
+    <string name="app_name">La Translator</string>
     <string name="translator">Translator</string>
     <string name="languages">Languages</string>
     <string name="settings">Settings</string>
     <string name="turn_on">Turn on</string>
+    <string name="turn_off">Turn off</string>
+    <string name="open_accessibility">Open accessibility</string>
     <string name="about">About</string>
     <string name="from">From</string>
     <string name="swap">Swap</string>
     <string name="turn_on_content_description">Translator will be constantly launched</string>
-    <string name="accessibility_service_check_title">Check an accessibility service permissions</string>
-    <string name="turn_on_hint">To turn on the translator, \ngive accessibility service</string>
-    <string name="accessibility_service_opening">Before start using a translator, please make sure you allowed an accessibility service to use it</string>
+    <string name="accessibility_check_title">Check an accessibility permissions</string>
+    <string name="turn_on_hint">Turn on the translator \nin accessibility service</string>
+    <string name="accessibility_opening">Before start using a translator, please make sure you allowed an accessibility to use it</string>
+    <string name="about_info">Version: 1.0 \nReleased: 2023 \ne-mail: d.matantsew@gmail.com</string>
     <string name="to">To</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
 </resources>
