--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,10 @@
     <string name="accessibility_check_title">Check an accessibility permissions</string>
     <string name="turn_on_hint">Turn on the translator \nin accessibility service</string>
     <string name="accessibility_opening">Before start using a translator, please make sure you allowed an accessibility to use it</string>
-    <string name="about_info">Version: 1.0 \nReleased: 2023 \ne-mail: d.matantsew@gmail.com</string>
+    <string name="first_version_released">First version released:</string>
+    <string name="email">e-mail: d.matantsew@gmail.com</string>
     <string name="to">To</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+    <string name="version">Version:</string>
 </resources>
