--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
     <string name="translator">Translator</string>
     <string name="languages">Languages</string>
     <string name="settings">Settings</string>
+    <string name="translation">Translation</string>
     <string name="turn_on">Turn on</string>
     <string name="turn_off">Turn off</string>
+    <string name="preview">Preview:</string>
+    <string name="corner_radius">Corner radius:</string>
     <string name="open_accessibility">Open accessibility</string>
     <string name="about">About</string>
     <string name="from">From</string>
