Settings: added new options (UI)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="turn_off">Turn off</string>
     <string name="preview">Preview:</string>
     <string name="corner_radius">Corner radius:</string>
+    <string name="text_size">Text size:</string>
+    <string name="background_color">Background color:</string>
+    <string name="text_color">Text color:</string>
     <string name="open_accessibility">Open accessibility</string>
     <string name="about">About</string>
     <string name="from">From</string>
