--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="languages">Languages</string>
     <string name="settings">Settings</string>
     <string name="translation">Translation</string>
+    <string name="text_copied">Text copied!</string>
     <string name="turn_on">Turn on</string>
     <string name="turn_off">Turn off</string>
     <string name="preview">Preview:</string>
