String res: polish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="search">Search:</string>
     <string name="background_color">Background color:</string>
     <string name="text_color">Text color:</string>
-    <string name="open_accessibility">Open accessibility</string>
+    <string name="open_accessibility">Open accessibility settings</string>
     <string name="about">About</string>
     <string name="from">From</string>
     <string name="swap">Swap</string>
@@ -21,9 +21,9 @@
     <string name="turn_on_hint">Turn on the translator \nin accessibility service</string>
     <string name="accessibility_opening">Before start using a translator, please make sure you allowed an accessibility to use it</string>
     <string name="first_version_released">First version released: 2023</string>
-    <string name="email">e-mail: d.matantsew@gmail.com</string>
+    <string name="email" translatable="false">e-mail: d.matantsew@gmail.com</string>
     <string name="to">To</string>
     <string name="cancel">Cancel</string>
-    <string name="ok">OK</string>
+    <string name="ok" translatable="false">OK</string>
     <string name="version">Version:</string>
 </resources>
