--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -18,9 +18,9 @@
     <string name="about">O aplikacji</string>
     <string name="from">Z</string>
     <string name="swap">Przemienić</string>
-    <string name="accessibility_check_title">Sprawdź uprawnienia dostępności</string>
+    <string name="accessibility_check_dialog_title">Sprawdź uprawnienia dostępności</string>
     <string name="turn_on_hint">Włącz tłumacz \nw usłudze dostępności</string>
-    <string name="accessibility_opening">Przed korzystaniem z tłumacza, upewnij się, że włączyłeś ustawienia dostępnośći</string>
+    <string name="accessibility_opening_dialog_description">Aby włączyć tłumacz, upewnij się, że włączyłeś go w ustawieniach dostępnośći</string>
     <string name="first_version_released">Pierwsza wersja wydana w 2023 roku</string>
     <string name="to">Na</string>
     <string name="cancel">Zamknąć</string>
