--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -5,8 +5,8 @@
     <string name="settings">Ustawienia</string>
     <string name="translation">Tłumaczenie</string>
     <string name="text_copied">Tekst skopiowany!</string>
-    <string name="turn_on">Włączyć</string>
-    <string name="turn_off">Wyłączyć</string>
+    <string name="activate">Aktywuj</string>
+    <string name="deactivate">Dezaktywuj</string>
     <string name="preview">Przegląd:</string>
     <string name="corner_radius">Promień narożnika:</string>
     <string name="text_size">Rozmiar czcionki:</string>
@@ -18,7 +18,7 @@
     <string name="from">Z</string>
     <string name="swap">Przemienić</string>
     <string name="accessibility_check_dialog_title">Sprawdź uprawnienia dostępności</string>
-    <string name="turn_on_hint">Włącz tłumacz \nw usłudze dostępności</string>
+    <string name="activate_hint">Włącz tłumacz \nw usłudze dostępności</string>
     <string name="accessibility_opening_dialog_description">Aby włączyć tłumacz, upewnij się, że włączyłeś go w ustawieniach dostępnośći</string>
     <string name="first_version_released">Pierwsza wersja wydana w 2023 roku</string>
     <string name="to">Na</string>
