--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -4,8 +4,8 @@
     <string name="settings">Impostazioni</string>
     <string name="translation">Traduzione</string>
     <string name="text_copied">Testo copiato!</string>
-    <string name="turn_on">Accendi</string>
-    <string name="turn_off">Spegni</string>
+    <string name="activate">Attivare</string>
+    <string name="deactivate">Disattivare</string>
     <string name="preview">Anteprima:</string>
     <string name="corner_radius">Raggio dell`angolo:</string>
     <string name="text_size">Dimensione del testo:</string>
@@ -17,7 +17,7 @@
     <string name="from">Da</string>
     <string name="swap">Scambia</string>
     <string name="accessibility_check_dialog_title">Controlla i permessi di accessibilità</string>
-    <string name="turn_on_hint">Attiva il traduttore\nel servizio di accessibilità</string>
+    <string name="activate_hint">Attiva il traduttore\nel servizio di accessibilità</string>
     <string name="accessibility_opening_dialog_description">Prima di iniziare a utilizzare un traduttore, assicurati di aver consentito a un`accessibilità di utilizzarlo</string>
     <string name="first_version_released">Prima versione rilasciata: 2023</string>
     <string name="to">A</string>
