--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="settings">Settings</string>
     <string name="translation">Translation</string>
     <string name="text_copied">Text copied!</string>
-    <string name="turn_on">Turn on</string>
-    <string name="turn_off">Turn off</string>
+    <string name="activate">Activate</string>
+    <string name="deactivate">Deactivate</string>
     <string name="preview">Preview:</string>
     <string name="corner_radius">Corner radius:</string>
     <string name="text_size">Text size:</string>
@@ -18,7 +18,7 @@
     <string name="from">From</string>
     <string name="swap">Swap</string>
     <string name="accessibility_check_dialog_title">Check an accessibility permissions</string>
-    <string name="turn_on_hint">Turn on the translator \nin accessibility service</string>
+    <string name="activate_hint">Activate the translator \nin accessibility service</string>
     <string name="accessibility_opening_dialog_description">Before start using a translator, please make sure you allowed an accessibility to use it</string>
     <string name="first_version_released">First version released: 2023</string>
     <string name="email" translatable="false">e-mail: d.matantsew@gmail.com</string>
