--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -18,7 +18,7 @@
     <string name="swap">Vaihda</string>
     <string name="accessibility_check_dialog_title">Tarkista esteettömyyden käyttöoikeudet</string>
     <string name="activate_hint">Aktivoi kääntäjä \nesteettömyyspalvelussa</string>
-    <string name="accessibility_opening_dialog_description">Ennen kuin alat käyttää kääntäjää, varmista, että olet sallinut esteettömyystoiminnon käyttää sitä</string>
+    <string name="accessibility_opening_dialog_description">La Translator vaatii käytettävyyden kerätä ja käsitellä valitun tekstin muokattavissa olevaan kenttään kääntämistä ja käännöksen näyttämistä kelluvassa kehyksessä. \n \nEnnen kuin alat käyttää kääntäjää, varmista, että olet sallinut esteettömyystoiminnon käyttää sitä</string>
     <string name="first_version_released">Ensimmäinen versio julkaistu: 2023</string>
     <string name="to">Kääntää kielelle</string>
     <string name="cancel">Peruuta</string>
