--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -18,7 +18,7 @@
     <string name="swap">교환</string>
     <string name="accessibility_check_dialog_title">접근성 권한 확인</string>
     <string name="activate_hint">접근성 서비스에서 번역기 활성화</string>
-    <string name="accessibility_opening_dialog_description">번역기를 사용하기 전에 번역기 사용에 대한 접근성을 허용했는지 확인하세요</string>
+    <string name="accessibility_opening_dialog_description">La Translator는 번역을 위해 편집 가능한 필드에서 선택한 텍스트를 수집하고 처리하고 부동 프레임에 번역을 표시하려면 접근성이 필요합니다. \n \n번역기를 사용하기 전에 번역기 사용에 대한 접근성을 허용했는지 확인하세요</string>
     <string name="first_version_released">첫 번째 버전 출시: 2023</string>
     <string name="to">받는 사람</string>
     <string name="cancel">취소</string>
